trunk/Archive/8ac6f8174c6a4154f183175cba3054df-8b05c24534e3b5e280cdeb6f4ec878bf/output
+ g++ -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-but-set-variable main.cpp
main.cpp: In instantiation of ‘bar<T>::bar() [with T = B]’:
main.cpp:12:12:   required from here
main.cpp:8:23: error: conversion from ‘A’ to non-scalar type ‘B’ requested
     bar() { T x = foo(); }
                       ^
+ ./a.out
/tmp/1374852399-1330199392/cmd.sh: line 9: ./a.out: No such file or directory
